text shadow and bold

--- a/index.html
+++ b/index.html
@@ -34,20 +34,11 @@
      color: darkslategrey;
      font-style: italic;
      font-family: Georgia, 'Times New Roman', Times, serif;
-   }
-   blockquote::after {
-    content: '"';
-    font-size: 150px;
-    font-style: italic;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    position: absolute;
-    top: -15px;
-    color: darkslategray;
-    right: -80px;
+	 text-shadow: 0px 0px 8px rgba(255,255,255,0.8);
    }
    h1 {
      color: mediumseagreen;
-     font-weight: lighter;
+     font-weight: bold;
      font-size: 40px;
    }
    p {
@@ -72,7 +63,7 @@
 </head>
 <body>
   <h1>Itsik Cohen Sayings Generator</h1>
-  <p>Collected and compiled by the friends in Verint - <a href="https://github.com/ItsikSays/ItsikSays.github.io">View Project on GitHub</a></p>
+  <p><b>Collected and compiled by the friends in Verint - <a href="https://github.com/ItsikSays/ItsikSays.github.io">View Project on GitHub</a></b></p>
   <blockquote><p id="waffle"></p></blockquote>
   <p class="more"><a id="more" href="#">Get another one</a></p>
 <script>
