Fixed two quotes

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@ var quotes = [
 	"Bug Love",
 	"Sweet!",
 	"זה לא סקראם, זה לשקר",
-	"I did not hit her I did nooooooooot",
+	"I did not hit her,<br>I did nooooooooot",
 	"Shitloads of children",
-	"תלונות לsuggestions box (הפח)"
+	"Suggestion Box-תלונות ל<br>(הפח)"
 ]
 
 var quoteslength = quotes.length - 1;
