--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	 text-shadow: 0px 0px 8px rgba(255,255,255,0.8);
    }
    h1 {
-     color: mediumseagreen;
+     color: #007200;
      font-weight: bold;
      font-size: 40px;
    }
@@ -66,6 +66,7 @@
   <p><b>Collected and compiled by the friends in Verint - <a href="https://github.com/ItsikSays/ItsikSays.github.io">View Project on GitHub</a></b></p>
   <blockquote><p id="waffle"></p></blockquote>
   <p class="more"><a id="more" href="#">Get another one</a></p>
+  <a href="https://github.com/ItsikSays/ItsikSays.github.io"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 <script>
 (function() {
 var quotes = [
@@ -77,7 +78,7 @@ var quotes = [
 	"אני לא רופא, יש לי ידע כללי עשיר",
 	"כושי קיבל את שלו",
 	"אישה יכולה לחלום",
-	"זה לא באג",
+	"!זה לא באג",
 	"Wow woman boundaries!",
 	"Good Times!",
 	"דבש ויהלומים",
@@ -85,8 +86,9 @@ var quotes = [
 	"Good stuff",
 	"Bug Love",
 	"Sweet!",
+	"Sweetheart",	
 	"זה לא סקראם, זה לשקר",
-	"I did not hit her,<br>I did nooooooooot",
+	"I did not hit her<br>I did nooooooooot",
 	"Shitloads of children",
 	"Suggestion Box-תלונות ל<br>(הפח)"
 ]
