--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta name="viewport" content="width=device-width">
 	<title>Itsik Cohen Sayings Generator!</title>
 	<style type="text/css">
-		html {
-			background: #f8f8f8;
-		}
+	html {
+		background: #f8f8f8;
+	}
    body {
      font-family: Arial, Helvetica, sans-serif;
       max-width: 700px;
@@ -59,6 +59,7 @@
 		width:100%;
 		height:100%;
 	}
+	div#preload { display: none; }
   </style>
 </head>
 <body>
@@ -135,5 +136,12 @@ getquoteandimage();
 
 })();
 </script>
+<div id="preload">
+   <img src="1.jpg" width="1" height="1" alt="Image 01" />
+   <img src="2.jpg" width="1" height="1" alt="Image 02" />
+   <img src="3.jpg" width="1" height="1" alt="Image 03" />
+   <img src="4.jpg" width="1" height="1" alt="Image 04" />
+   <img src="5.jpg" width="1" height="1" alt="Image 05" />
+</div>
 </body>
 </html>
