Two more sentences

--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@ var quotes = [
 	"Wow woman boundaries!",
 	"Good Times!",
 	"דבש ויהלומים",
+	"להתראות ילדים",
+	"?אתה זוכר שאני שבועיים לא פה באוגוסט, כן",
 	"!סקסי",
 	"Good stuff",
 	"Bug Love",
