Disabled one due to rtl alignment issues + fixed another

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@ var quotes = [
 	"Good Times!",
 	"דבש ויהלומים",
 	"להתראות ילדים",
-	"?אתה זוכר שאני שבועיים לא פה באוגוסט, כן",
+	//"אתה זוכר שאני שבועיים לא פה באוגוסט, כן?", /*disabled-rtl issue*/
 	"!סקסי",
 	"Good stuff",
-	"Bug Love",
+	"Love Bug",
 	"Sweet!",
 	"Sweetheart",	
 	"זה לא סקראם, זה לשקר",
