added  some sentence + fixed two

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@ var quotes = [
 	"Good Times!",
 	"דבש ויהלומים",
 	"להתראות ילדים",
-	//"אתה זוכר שאני שבועיים לא פה באוגוסט, כן?", /*disabled-rtl issue*/
-	"!סקסי",
+	"!היי סקסי",
 	"Good stuff",
 	"Love Bug",
 	"Sweet!",
@@ -93,8 +92,12 @@ var quotes = [
 	"זה לא סקראם, זה לשקר",
 	"I did not hit her<br>I did nooooooooot",
 	"Shitloads of children",
-	"Suggestion Box-תלונות ל<br>(הפח)"
+	"Itsik Vagina Cohen",	
+	"Suggestion Box-תלונות ל<br>(הפח)",
+	"Как поживаете?",
+	"Питух"
 ]
+//"אתה זוכר שאני שבועיים לא פה באוגוסט, כן?", /*disabled-rtl issue*/
 
 var quoteslength = quotes.length - 1;
 
