--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width">
+	<meta property="og:title" content="Itsik Cohen Sayings Generator!" />
+	<meta property="og:description" content="Collected and compiled by the friends at Verint"/>
+	<meta property="og:image" content="site_thumbnail.jpg">
+	<meta name="viewport" content="width=device-width">
 	<title>Itsik Cohen Sayings Generator!</title>
 	<style type="text/css">
 	html {
