--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
-	<meta property="og:title" content="Itsik Cohen Sayings Generator!" />
+	<meta property="og:title" content="Itsik Cohen Sayings Generator" />
 	<meta property="og:description" content="Collected and compiled by the friends at Verint"/>
-	<meta property="og:image" content="site_thumbnail.jpg">
+	<meta property="og:image" content="http://itsiksays.github.io/dev/site_thumbnail.jpg">
 	<meta name="viewport" content="width=device-width">
 	<title>Itsik Cohen Sayings Generator!</title>
 	<style type="text/css">
