--- a/index.html
+++ b/index.html
@@ -63,6 +63,14 @@
 		height:100%;
 	}
 	div#preload { display: none; }
+	
+	#social_sharing{
+		margin: 0 auto;
+		width: 220px;
+		position: relative;
+		top: 200px;
+	}
+	
   </style>
 </head>
 <body>
@@ -70,6 +78,17 @@
   <p><b>Collected and compiled by the friends at Verint - <a href="https://github.com/ItsikSays/ItsikSays.github.io">View Project on GitHub</a></b></p>
   <blockquote><p id="waffle"></p></blockquote>
   <p class="more"><a id="more" href="#">Get another one</a></p>
+
+  <div id="social_sharing" class="a2a_kit a2a_kit_size_32 a2a_default_style">
+    <a class="a2a_button_facebook"></a>
+    <a class="a2a_button_google_plus"></a>
+    <a class="a2a_button_linkedin"></a>
+    <a class="a2a_button_twitter"></a>
+    <a class="a2a_button_email"></a>
+    <a class="a2a_button_whatsapp"></a>
+  </div>
+  <script async src="https://static.addtoany.com/menu/page.js"></script>
+  
   <a href="https://github.com/ItsikSays/ItsikSays.github.io"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
 <script>
 (function() {
@@ -100,7 +119,6 @@ var quotes = [
 	"Как поживаете?",
 	"Питух"
 ]
-//"אתה זוכר שאני שבועיים לא פה באוגוסט, כן?", /*disabled-rtl issue*/
 
 var quoteslength = quotes.length - 1;
 
