--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
   <script async src="https://static.addtoany.com/menu/page.js"></script>
   
 <script>
+(function(){
+        var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
+})("woopra");
+woopra.config({
+    domain: 'itsiksays.github.io'
+});
+woopra.track();
+
 (function() {
 var quotes = [
 	"!איזה האקה",
@@ -127,13 +135,18 @@ var currentquote = -1;
 
 var currentpic = -1;
 
-function getquoteandimage(){
+function setquoteandimage(){
   //change quote
   currentquote = getrand_norepeat(quoteslength, currentquote);
   document.querySelector('#waffle').innerHTML = quotes[currentquote];
   //change pic
   currentpic = getrand_norepeat(picslength,currentpic); 
   changeBackground( (currentpic+1).toString() + '.jpg' );
+}
+
+function requestnewquoteandimage(){
+  setquoteandimage();
+  woopra.track("Get another one");
 }
 
 function changeBackground(imgfile) {
@@ -156,8 +169,8 @@ function getrand_norepeat(max,last) {
   while (out == last);
   return out;
 }
-document.querySelector('#more').addEventListener('click', getquoteandimage);
-getquoteandimage();
+document.querySelector('#more').addEventListener('click', requestnewquoteandimage);
+setquoteandimage();
 
 })();
 </script>
