--- a/index.html
+++ b/index.html
@@ -172,6 +172,16 @@ function getrand_norepeat(max,last) {
 document.querySelector('#more').addEventListener('click', requestnewquoteandimage);
 setquoteandimage();
 
+function track_onshare(data) {
+	woopra.track("Shared to " + data.service);
+}
+
+var a2a_config = a2a_config || {};
+a2a_config.callbacks = a2a_config.callbacks || [];
+a2a_config.callbacks.push({
+    share: track_onshare
+});
+
 })();
 </script>
 <script>
@@ -183,15 +193,6 @@ setquoteandimage();
   ga('create', 'UA-405066-6', 'auto');
   ga('send', 'pageview');
 
-</script>
-<script>
-(function(){
-        var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
-})("woopra");
-woopra.config({
-    domain: 'itsiksays.github.io'
-});
-woopra.track();
 </script>
 <div id="preload">
    <img src="1.jpg" width="1" height="1" alt="Image 01" />
