--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     <a class="a2a_button_email"></a>
     <a class="a2a_button_whatsapp"></a>
   </div>
-
+  <script async src="https://static.addtoany.com/menu/page.js"></script>
+  
 <script>
 (function(){
         var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
@@ -103,7 +104,7 @@ var quotes = [
 	"תרשי לי להחמיא לך",
 	"Oh, Hi Children!",
 	"ג'ינה ממש יפה, אבל ממש ממש יפה",
-	"ג'ינה כך כך יפה, כשהיא הולכת מלאכים שרים",	
+	"<small>ג'ינה כל כך יפה, כשהיא הולכת מלאכים שרים</small>",
 	"אני לא רופא, יש לי ידע כללי עשיר",
 	"כושי קיבל את שלו",
 	"אישה יכולה לחלום",
@@ -193,7 +194,6 @@ a2a_config.callbacks.push({
   ga('send', 'pageview');
 
 </script>
-<script async src="https://static.addtoany.com/menu/page.js"></script>
 <div id="preload">
    <img src="1.jpg" width="1" height="1" alt="Image 01" />
    <img src="2.jpg" width="1" height="1" alt="Image 02" />
