--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ var quotes = [
 	"!איזה האקה",
 	"תרשי לי להחמיא לך",
 	"Oh, Hi Children!",
-	"ג'ינה ממש יפה, אבל ממש ממש יפה",
+	"<small>ג'ינה ממש יפה, אבל ממש ממש יפה</small>",
 	"<small>ג'ינה כל כך יפה, כשהיא הולכת מלאכים שרים</small>",
 	"אני לא רופא, יש לי ידע כללי עשיר",
 	"כושי קיבל את שלו",
@@ -119,7 +119,7 @@ var quotes = [
 	"Sweet!",
 	"Sweetheart",	
 	"זה לא סקראם, זה לשקר",
-	"I did not hit her<br>I did nooooooooot",
+	"<small>I did not hit her<br>I did nooooooooot</small>",
 	"Shitloads of children",
 	"Itsik Vagina Cohen",	
 	"Suggestion Box-תלונות ל<br>(הפח)",
