shrank one more

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ var quotes = [
 	"<small>I did not hit her<br>I did nooooooooot</small>",
 	"Shitloads of children",
 	"Itsik Vagina Cohen",	
-	"Suggestion Box-תלונות ל<br>(הפח)",
+	"<small>Suggestion Box-תלונות ל<br>(הפח)</small>",
 	"Как поживаете?",
 	"Питух"
 ]
