fixed long quote

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ var quotes = [
 	"Sweet!",
 	"Sweetheart",	
 	"זה לא סקראם, זה לשקר",
-	"<small>I did not hit her<br>I did nooooooooot</small>",
+	"<small>I did not hit her, I did<br>nooooooooot</small>",
 	"Shitloads of children",
 	"Itsik Vagina Cohen",	
 	"<small>Suggestion Box-תלונות ל<br>(הפח)</small>",
